# triton-newt-reid

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: README.md  demo.py
artifacts/: ab_test_headline.json
configs/: crop.yaml  embed.yaml  embed_C2_session.yaml  paths.example.yaml  spot.yaml
docs_public/: ИТОГОВЫЕ_ЧИСЛА.md  МЕТОДОЛОГИЯ_оговорки.md
docs_public/uml/: 01_use_case.puml  02_component.puml  03_deployment.puml  04_sequence_identify.puml  05_class.puml  06_activity.puml
notebooks/: block4_colab.ipynb  temporal_ablation.ipynb
src/triton_crop/: __init__.py  ab_harness.py  cli.py  config.py  constellation.py  corrector.py  crops_manifest.py  demo_backend.py  (+26 more)
tests/: conftest.py  test_cli.py  test_config.py  test_constellation_geom.py  test_constellation_match.py  test_crop_ab.py  test_crop_axis.py  test_crop_bootstrap.py  test_crop_cli.py  test_crop_config.py  test_crop_corrector.py  test_crop_geometry.py  test_crop_labelio.py  test_crop_manifest.py  test_crop_masks.py  test_crop_pipeline.py  test_crop_predict.py  test_crop_proxy.py  test_crop_pseudo.py  test_crop_stats.py  test_crop_unroll.py  test_crop_validate.py  test_crop_viz.py  test_crop_yolo_export.py  test_dedup.py  test_demo_backend.py  test_embed_ab.py  test_embed_augment.py  test_embed_dataset.py  test_embed_eval.py  test_embed_model.py  test_embed_session_sampler.py  test_embed_temporal.py  test_embed_train.py  test_embed_verify.py  test_hybrid.py  test_imageio.py  test_ingest.py  test_loader.py  test_manifest.py  (+9 more)
(+15 files in other folders)
